# procpilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
procpilot/: __init__.py  alerts.py  cli.py  core.py  monitor.py  tree.py  tui.py
