[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procpilot"
version = "1.0.0"
description = "🚀 ProcPilot - Lightweight Terminal Process Intelligence Manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq"}
]
keywords = ["process", "manager", "monitor", "terminal", "tui", "cli", "system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.scripts]
procpilot = "procpilot.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/procpilot"
Repository = "https://github.com/gitstq/procpilot"
Issues = "https://github.com/gitstq/procpilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["procpilot*"]
